fixed bug where nav split on smaller screens with an additional media query

--- a/styles.css
+++ b/styles.css
@@ -236,10 +236,6 @@ footer {
 		font-size: 15px;
 	}
 
-	nav img {
-		padding: 2px;
-	}
-	
 	header {
 		padding-top: 40px;
 		padding-bottom: 20px;
@@ -277,6 +273,16 @@ footer {
 	}	
 }
 
+@media screen and (max-width: 440px) {
+	nav li {
+		padding: 10px 3px;
+	}
+	
+	.navContainerLogo {
+		display: none;
+	}
+}
+
 @media screen and (max-width: 375px) {
 	html {
 		font-size: 12px;
@@ -285,14 +291,6 @@ footer {
 	header {
 		padding-top: 40px;
 		padding-bottom: 20px;
-	}
-	
-	nav li {
-		padding: 10px 3px;
-	}
-	
-	.navContainerLogo {
-		display: none;
 	}
 	
 	header h2 {
